traces/bug_193.txt
#193
kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6678: error: Dead Store
  The value written to `&opaque` (type `unsigned int`) is never used.

kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6678:24: Write of unused value
6676.             "Failed to open DCP consumer connection!");
6677.     add_stream_for_consumer(
6678.             h, cookie, opaque++, Vbid(0), 0, cb::mcbp::Status::Success);
                             ^
6679. 
6680.     std::string opaqueStr("eq_dcpq:" + name + ":stream_0_opaque");
